croatia-components-main@ce2ceb27993/backstage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: backstage
  name: backstage
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
