croatia-components-main@ce2ceb27993/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  type: ClusterIP
  ports:
    - port: 7007
      targetPort: 7007
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: backstage
